ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Fund_End_Use__c.field-meta.xml
<CustomField>
    <fullName>Fund_End_Use__c</fullName>
    <label>Fund End Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New_Vehicle_Margin_Money</fullName>
                <label>New Vehicle Margin Money</label>
            </value>
            <value>
                <fullName>Home_Buying</fullName>
                <label>Home Buying</label>
            </value>
            <value>
                <fullName>Marriage_in_Family</fullName>
                <label>Marriage in Family</label>
            </value>
            <value>
                <fullName>Market_Borrowing</fullName>
                <label>Market Borrowing</label>
            </value>
            <value>
                <fullName>Vehicle_Repairs_Tax</fullName>
                <label>Vehicle Repairs/ Tax</label>
            </value>
            <value>
                <fullName>Home_Renovation</fullName>
                <label>Home Renovation</label>
            </value>
            <value>
                <fullName>Medical_Expenses</fullName>
                <label>Medical Expenses</label>
            </value>
            <value>
                <fullName>Investment _in_Business</fullName>
                <label>Investment in Business</label>
            </value>
            <value>
                <fullName>Loan_Consolidation</fullName>
                <label>Loan Consolidation</label>
            </value>
            <value>
                <fullName>Education_Expenses</fullName>
                <label>Education Expenses</label>
            </value>
            <value>
                <fullName>Purchase_of_used_tractor</fullName>
                <label>Purchase of used tractor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>