ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Insurance_Application_Document__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Application_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Application Document</label>
    <referenceTo>Documents__c</referenceTo>
    <relationshipLabel>LoanDisbursementDetails</relationshipLabel>
    <relationshipName>LoanDisbursementDetails</relationshipName>
    <type>Lookup</type>
</CustomField>