ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Insurance_application_no__c.field-meta.xml
<CustomField>
    <fullName>Insurance_application_no__c</fullName>
    <label>Insurance application no.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>