ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <label>Insurer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>