ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Lien_marked_IBL__c.field-meta.xml
<CustomField>
    <fullName>Lien_marked_IBL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lien marked - IBL?</label>
    <type>Checkbox</type>
</CustomField>