ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Long_term_policy_available__c.field-meta.xml
<CustomField>
    <fullName>Long_term_policy_available__c</fullName>
    <label>Long term policy available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>