ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Long_term_policy_Own_Damage_Yrs__c.field-meta.xml
<CustomField>
    <fullName>Long_term_policy_Own_Damage_Yrs__c</fullName>
    <label>Long term policy Own Damage Yrs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>