ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Marked_on__c.field-meta.xml
<CustomField>
    <fullName>Marked_on__c</fullName>
    <label>Marked on</label>
    <type>Date</type>
</CustomField>