ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Name_transferred__c.field-meta.xml
<CustomField>
    <fullName>Name_transferred__c</fullName>
    <label>Name transferred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>