ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Now_lien_in_the_name_of__c.field-meta.xml
<CustomField>
    <fullName>Now_lien_in_the_name_of__c</fullName>
    <label>Now lien in the name of</label>
    <length>100</length>
    <type>Text</type>
</CustomField>