ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Original_purchase_date__c.field-meta.xml
<CustomField>
    <fullName>Original_purchase_date__c</fullName>
    <label>Original purchase date</label>
    <type>Date</type>
</CustomField>