ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Original_Purchase_value_in_Rs__c.field-meta.xml
<CustomField>
    <fullName>Original_Purchase_value_in_Rs__c</fullName>
    <label>Original Purchase value (in Rs.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>