ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Own_Damage_Premium_Add_ons__c.field-meta.xml
<CustomField>
    <fullName>Own_Damage_Premium_Add_ons__c</fullName>
    <label>Own Damage Premium + Add ons</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>