ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Parent_Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Parent_Loan_Application__c</fullName>
    <label>Parent Loan Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>LoanDisbursementDetails</relationshipLabel>
    <relationshipName>LoanDisbursementDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>