ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Payment_Originated_From__c.field-meta.xml
<CustomField>
    <fullName>Payment_Originated_From__c</fullName>
    <label>Payment Originated From</label>
    <length>10</length>
    <type>Text</type>
</CustomField>