ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Payment_to_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Payment_to_Dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment to Dealer</label>
    <type>Checkbox</type>
</CustomField>