ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Payment_To_DSA__c.field-meta.xml
<CustomField>
    <fullName>Payment_To_DSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment To DSA</label>
    <type>Checkbox</type>
</CustomField>