ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/PDAV_Flag__c.field-meta.xml
<CustomField>
    <fullName>PDAV_Flag__c</fullName>
    <label>PDAV Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>