ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Physical_mandate_dispatched_to_Karapakka__c.field-meta.xml
<CustomField>
    <fullName>Physical_mandate_dispatched_to_Karapakka__c</fullName>
    <label>Physical mandate dispatched to Karapakka</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>