ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Policy_available__c.field-meta.xml
<CustomField>
    <fullName>Policy_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policy available</label>
    <type>Checkbox</type>
</CustomField>