ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Purchase_doc_catq__c.field-meta.xml
<CustomField>
    <fullName>Purchase_doc_catq__c</fullName>
    <label>Purchase doc catq.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Sale_Agreement</fullName>
                <label>Sale Agreement</label>
            </value>
            <value>
                <fullName>Not_Available</fullName>
                <label>Not Available</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>