ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/RC_Document__c.field-meta.xml
<CustomField>
    <fullName>RC_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RC Document</label>
    <referenceTo>Documents__c</referenceTo>
    <relationshipLabel>LoanDisbursementDetails (RC Document)</relationshipLabel>
    <relationshipName>LoanDisbursementDetails1</relationshipName>
    <type>Lookup</type>
</CustomField>