ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Reg_type__c.field-meta.xml
<CustomField>
    <fullName>Reg_type__c</fullName>
    <label>Reg. type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Old</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>