ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Registration_Format__c.field-meta.xml
<CustomField>
    <fullName>Registration_Format__c</fullName>
    <label>Registration Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Old</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>