ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Registration_Owner_Nam__c.field-meta.xml
<CustomField>
    <fullName>Registration_Owner_Nam__c</fullName>
    <label>Registration Owner Nam</label>
    <length>50</length>
    <type>Text</type>
</CustomField>