ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/RSD__c.field-meta.xml
<CustomField>
    <fullName>RSD__c</fullName>
    <label>RSD</label>
    <type>Date</type>
</CustomField>