ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/RTA_taxes_remitted_upto__c.field-meta.xml
<CustomField>
    <fullName>RTA_taxes_remitted_upto__c</fullName>
    <label>RTA taxes remitted upto</label>
    <type>Date</type>
</CustomField>