ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/SecondYr_IDV__c.field-meta.xml
<CustomField>
    <fullName>SecondYr_IDV__c</fullName>
    <label>SecondYr_IDV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>