ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/SecondYr_Third_Party_Premium__c.field-meta.xml
<CustomField>
    <fullName>SecondYr_Third_Party_Premium__c</fullName>
    <label>SecondYr_Third Party Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>