ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Seller_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Seller_Account_Number__c</fullName>
    <label>Seller Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>