ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Seller_Bank_Branch_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Seller_Bank_Branch_Pincode__c</fullName>
    <label>Seller Bank Branch Pincode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>