ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Seller_Bank_IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>Seller_Bank_IFSC_Code__c</fullName>
    <label>Seller Bank IFSC Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>