ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Seller_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Bank_Name__c</fullName>
    <label>Seller Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>