ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Third_Party_Premiums_PA_Cover__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Premiums_PA_Cover__c</fullName>
    <label>Third Party Premiums + PA Cover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>