ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/ThirdYr_Third_Party_Premium__c.field-meta.xml
<CustomField>
    <fullName>ThirdYr_Third_Party_Premium__c</fullName>
    <label>ThirdYr_Third Party Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>