ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Total_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjustment_Amount__c</fullName>
    <formula>Adjustment_Amount1__c  +  Adjustment_Amount2__c  +  Adjustment_Amount3__c  +  Adjustment_Amount4__c  +  Adjustment_Amount5__c  +  Adjustment_Amount6__c  +  Adjustment_Amount7__c  +  Adjustment_Amount8__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>