ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Total_beneficiary_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_beneficiary_amount__c</fullName>
    <formula>Beneficiary_1_Amount__c  +  Beneficiary_2_Amount__c  +  Beneficiary_3_Amount__c  +  Beneficiary_4_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total beneficiary amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>