ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Vehicle_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Delivered__c</fullName>
    <label>Vehicle Delivered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>