ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Vehicle_Registered_in_Name__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registered_in_Name__c</fullName>
    <label>Vehicle Registered in Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>