ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/Vehicle_Sold_By__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Sold_By__c</fullName>
    <label>Vehicle Sold By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>