ProdIND/ProdPrograms/force-app/main/default/objects/LoanDisbursementDetails__c/fields/X1st_Yr_Insurance_premium_paid_by__c.field-meta.xml
<CustomField>
    <fullName>X1st_Yr_Insurance_premium_paid_by__c</fullName>
    <label>1st Yr Insurance premium paid by</label>
    <length>100</length>
    <type>Text</type>
</CustomField>